--- a/index.html
+++ b/index.html
@@ -511,11 +511,14 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   </div>
 </div> <!-- End of 'editor' section. -->
 
+
 <div id="python"> <!-- Start of 'Python' section. Remove the third paragraph if
            the workshop will teach Python using something other than
            the IPython notebook.
            Details at http://ipython.org/ipython-doc/2/install/install.html#browser-compatibility -->
-  <h3>Python</h3>
+  
+<!--	
+	<h3>Python</h3>
 
   <p>
     <a href="http://python.org">Python</a> is a popular language for
@@ -594,6 +597,8 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
       </ol>
     </div>
   </div>
+
+-->
 <!--
   <p>
   Once you are done installing the software listed above,
@@ -654,7 +659,8 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   </div>
 </div> <!-- End of 'R' section. -->
 
-<div id="sql"> <!-- Start of 'SQLite' section. -->
+<!--
+<div id="sql"> 
   <h3>SQLite</h3>
 
   <p>
@@ -698,9 +704,11 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
   <p><strong>If you installed Anaconda, it also has a copy of SQLite
     <a href="https://github.com/ContinuumIO/anaconda-issues/issues/307">without support to <code>readline</code></a>.
     Instructors will provide a workaround for it if needed.</strong></p>
-</div> <!-- End of 'SQLite' section. -->
 
-<div id="openrefine"> <!-- Start of 'OpenRefine' section. -->
+-->
+</div> <!-- End of 'SQLite' section. -->
+<!--
+<div id="openrefine"> 
   <h3>OpenRefine</h3>
   <p>
     For this lesson you will need <em>OpenRefine</em> and a
@@ -773,4 +781,5 @@ eventbrite:           # optional: alphanumeric key for Eventbrite registration, 
     </li>
   </ol>
 </div>
+-->
 -->
