--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ enddate: 2017-12-03        # machine-readable end date for the workshop in YYYY-
 instructor: ["Nora Mitchell", "Karla Lindquist"] # boxed, comma-separated list of instructors' names as strings, like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Amber Bahorik", "Martin Frigaard", "Lance Leong", "Stefan Topfstedt (Saturday)", "Joan C. Dew (Sunday)"]     # boxed, comma-separated list of helpers' names, like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: ["joanna.kang@ucsf.edu"]    # boxed, comma-separated list of contact email addresses for the host, lead instructor, or whoever else is handling questions, like ["marlyn.wescoff@example.org", "fran.bilas@example.org", "ruth.lichterman@example.org"]
-collaborative_notes:             # optional: URL for the workshop collaborative notes, e.g. an Etherpad or Google Docs document
+collaborative_notes: http://pad.software-carpentry.org/2017-12-02-UCSF-R            # optional: URL for the workshop collaborative notes, e.g. an Etherpad or Google Docs document
 eventbrite: 38866188817          # optional: alphanumeric key for Eventbrite registration, e.g., "1234567890AB" (if Eventbrite is being used)
 ---
 
@@ -227,7 +227,9 @@ eventbrite: 38866188817          # optional: alphanumeric key for Eventbrite reg
   We will use this <a href="{{page.collaborative_notes}}">collaborative document</a> for chatting, taking notes, and sharing URLs and bits of code.
 </p>
 {% endif %}
-
+<p>
+  We will use this <a href="https://socrative.com/">site for assessing understanding. Room name: <b>UCSFR</b>.
+</p>
 <hr/>
 
 <!--
