--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@ eventbrite: 38866188817          # optional: alphanumeric key for Eventbrite reg
 -->
 {% if page.collaborative_notes %}
 <p id="collaborative_notes">
-  We will use this <a href="{{page.collaborative_notes}}">collaborative document</a> for chatting, taking notes, and sharing URLs and bits of code.
+  We will use this <a href="{{page.collaborative_notes}}">etherpadt</a> for chatting, taking notes, and sharing URLs and bits of code.
 </p>
 {% endif %}
 <p>
-  We will use this <a href="https://socrative.com/">site for assessing understanding. Room name: <b>UCSFR</b>.
+  We will use <a href="https://b.socrative.com/login/student/">socrative</a> for assessing understanding. Room name: <b>UCSFR</b>.
 </p>
 <hr/>
 
