added data links

--- a/index.html
+++ b/index.html
@@ -232,6 +232,18 @@ eventbrite: 38866188817          # optional: alphanumeric key for Eventbrite reg
 </p>
 <hr/>
 
+<p id="data">
+<strong>Data:</strong>
+  <br/>
+  Here are links to the data we will be using for the workshop.
+  <ul>
+    <li>Day 1 Unix Shell Data: <a href="http://swcarpentry.github.io/shell-novice/data/shell-novice-data.zip" download>shell-novice-data.zip</a></li>
+    <li>Day 1/Day 2 R Data: <a href="https://raw.githubusercontent.com/resbaz/r-novice-gapminder-files/master/data/gapminder-FiveYearData.csv" download>Gapminder Dataset</a></li>
+  </ul>
+</p>
+
+<hr/>
+
 <!--
   SYLLABUS
 
