--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ eventbrite: 38866188817          # optional: alphanumeric key for Eventbrite reg
   Here are links to the data we will be using for the workshop.
   <ul>
     <li>Day 1 Unix Shell Data: <a href="http://swcarpentry.github.io/shell-novice/data/shell-novice-data.zip" download>shell-novice-data.zip</a></li>
-    <li>Day 1/Day 2 R Data: <a href="https://raw.githubusercontent.com/resbaz/r-novice-gapminder-files/master/data/gapminder-FiveYearData.csv" download>Gapminder Dataset</a></li>
+    <li>Day 1/Day 2 R Data: <a href="https://raw.githubusercontent.com/resbaz/r-novice-gapminder-files/master/data/gapminder-FiveYearData.csv" download>Gapminder Dataset</a></li> (CTRL + S, right mouse click -> “Save as”, or File -> “Save page as”)
   </ul>
 </p>
 
