--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ eventbrite: 38866188817          # optional: alphanumeric key for Eventbrite reg
 -->
 {% if page.collaborative_notes %}
 <p id="collaborative_notes">
-  We will use this <a href="{{page.collaborative_notes}}">etherpadt</a> for chatting, taking notes, and sharing URLs and bits of code.
+  We will use this <a href="{{page.collaborative_notes}}">etherpad</a> for chatting, taking notes, and sharing URLs and bits of code.
 </p>
 {% endif %}
 <p>
